// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the App component 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <View
      onStartShouldSetResponderCapture={[Function]}
      pointerEvents="auto"
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 0,
              },
              Object {
                "scaleX": 1,
              },
              Object {
                "scaleY": 1,
              },
              Object {
                "rotate": "0deg",
              },
              Object {
                "skewX": "0deg",
              },
              Object {
                "skewY": "0deg",
              },
            ],
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#1abc9c",
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#ecf0f1",
                "fontSize": 80,
                "marginTop": 16,
              }
            }
          >
            Awale
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 2,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 30,
              }
            }
          >
            <View
              accessibilityComponentType="button"
              accessibilityLabel={undefined}
              accessibilityTraits={
                Array [
                  "button",
                ]
              }
              accessible={true}
              hitSlop={undefined}
              isTVSelectable={true}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <View
                style={
                  Array [
                    Object {},
                  ]
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#0C42FD",
                        "fontSize": 18,
                        "padding": 8,
                        "textAlign": "center",
                      },
                      Object {
                        "color": "#138a72",
                      },
                    ]
                  }
                >
                  Play against computer
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "marginBottom": 30,
              }
            }
          >
            <View
              accessibilityComponentType="button"
              accessibilityLabel={undefined}
              accessibilityTraits={
                Array [
                  "button",
                ]
              }
              accessible={true}
              hitSlop={undefined}
              isTVSelectable={true}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <View
                style={
                  Array [
                    Object {},
                  ]
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#0C42FD",
                        "fontSize": 18,
                        "padding": 8,
                        "textAlign": "center",
                      },
                      Object {
                        "color": "#138a72",
                      },
                    ]
                  }
                >
                  Play against another player
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders the Board component 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f39c12",
      "borderRadius": 10,
      "flexDirection": "row",
      "flexWrap": "wrap",
      "height": 130,
      "justifyContent": "space-around",
      "marginTop": 50,
      "padding": 10,
      "width": 340,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "#d35400",
          "borderRadius": 20,
          "color": "#f1c40f",
          "fontWeight": "bold",
          "height": 40,
          "marginLeft": 10,
          "marginTop": 10,
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": 40,
        },
        Object {
          "backgroundColor": "#b94a00",
          "color": "#f39c12",
        },
      ]
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "#d35400",
          "borderRadius": 20,
          "color": "#f1c40f",
          "fontWeight": "bold",
          "height": 40,
          "marginLeft": 10,
          "marginTop": 10,
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": 40,
        },
        Object {
          "backgroundColor": "#b94a00",
          "color": "#f39c12",
        },
      ]
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "#d35400",
          "borderRadius": 20,
          "color": "#f1c40f",
          "fontWeight": "bold",
          "height": 40,
          "marginLeft": 10,
          "marginTop": 10,
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": 40,
        },
        Object {
          "backgroundColor": "#b94a00",
          "color": "#f39c12",
        },
      ]
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "#d35400",
          "borderRadius": 20,
          "color": "#f1c40f",
          "fontWeight": "bold",
          "height": 40,
          "marginLeft": 10,
          "marginTop": 10,
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": 40,
        },
        Object {
          "backgroundColor": "#b94a00",
          "color": "#f39c12",
        },
      ]
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "#d35400",
          "borderRadius": 20,
          "color": "#f1c40f",
          "fontWeight": "bold",
          "height": 40,
          "marginLeft": 10,
          "marginTop": 10,
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": 40,
        },
        Object {
          "backgroundColor": "#b94a00",
          "color": "#f39c12",
        },
      ]
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "#d35400",
          "borderRadius": 20,
          "color": "#f1c40f",
          "fontWeight": "bold",
          "height": 40,
          "marginLeft": 10,
          "marginTop": 10,
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": 40,
        },
        Object {
          "backgroundColor": "#b94a00",
          "color": "#f39c12",
        },
      ]
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "#d35400",
        "borderRadius": 20,
        "color": "#f1c40f",
        "fontWeight": "bold",
        "height": 40,
        "marginLeft": 10,
        "marginTop": 10,
        "textAlign": "center",
        "textAlignVertical": "center",
        "width": 40,
      }
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "#d35400",
        "borderRadius": 20,
        "color": "#f1c40f",
        "fontWeight": "bold",
        "height": 40,
        "marginLeft": 10,
        "marginTop": 10,
        "textAlign": "center",
        "textAlignVertical": "center",
        "width": 40,
      }
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "#d35400",
        "borderRadius": 20,
        "color": "#f1c40f",
        "fontWeight": "bold",
        "height": 40,
        "marginLeft": 10,
        "marginTop": 10,
        "textAlign": "center",
        "textAlignVertical": "center",
        "width": 40,
      }
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "#d35400",
        "borderRadius": 20,
        "color": "#f1c40f",
        "fontWeight": "bold",
        "height": 40,
        "marginLeft": 10,
        "marginTop": 10,
        "textAlign": "center",
        "textAlignVertical": "center",
        "width": 40,
      }
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "#d35400",
        "borderRadius": 20,
        "color": "#f1c40f",
        "fontWeight": "bold",
        "height": 40,
        "marginLeft": 10,
        "marginTop": 10,
        "textAlign": "center",
        "textAlignVertical": "center",
        "width": 40,
      }
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "#d35400",
        "borderRadius": 20,
        "color": "#f1c40f",
        "fontWeight": "bold",
        "height": 40,
        "marginLeft": 10,
        "marginTop": 10,
        "textAlign": "center",
        "textAlignVertical": "center",
        "width": 40,
      }
    }
  >
    4
  </Text>
</View>
`;

exports[`renders the PitButton component 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#d35400",
      "borderRadius": 20,
      "color": "#f1c40f",
      "fontWeight": "bold",
      "height": 40,
      "marginLeft": 10,
      "marginTop": 10,
      "textAlign": "center",
      "textAlignVertical": "center",
      "width": 40,
    }
  }
>
  4
</Text>
`;

exports[`renders the Play component 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#1abc9c",
      "flex": 1,
      "paddingLeft": 10,
      "paddingRight": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "marginBottom": 5,
      }
    }
  >
    <View
      accessibilityComponentType="button"
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      hitSlop={undefined}
      isTVSelectable={true}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#0C42FD",
                "fontSize": 18,
                "padding": 8,
                "textAlign": "center",
              },
              Object {
                "color": "#138a72",
              },
            ]
          }
        >
          Back to home
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row-reverse",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "borderRadius": 50,
              "height": 100,
              "width": 100,
            },
            Object {
              "backgroundColor": "#34495e",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#1abc9c",
              "borderRadius": 45,
              "height": 90,
              "marginLeft": 5,
              "marginTop": 5,
              "width": 90,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontSize": 30,
                  "fontWeight": "bold",
                  "marginTop": 20,
                  "textAlign": "center",
                },
                Object {
                  "color": "white",
                  "opacity": 0.5,
                },
              ]
            }
          >
            0
          </Text>
        </View>
      </View>
      <View />
      <View />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 4,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#f39c12",
          "borderRadius": 10,
          "flexDirection": "row",
          "flexWrap": "wrap",
          "height": 130,
          "justifyContent": "space-around",
          "marginTop": 50,
          "padding": 10,
          "width": 340,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "backgroundColor": "#d35400",
              "borderRadius": 20,
              "color": "#f1c40f",
              "fontWeight": "bold",
              "height": 40,
              "marginLeft": 10,
              "marginTop": 10,
              "textAlign": "center",
              "textAlignVertical": "center",
              "width": 40,
            },
            Object {
              "backgroundColor": "#b94a00",
              "color": "#f39c12",
            },
          ]
        }
      >
        4
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "backgroundColor": "#d35400",
              "borderRadius": 20,
              "color": "#f1c40f",
              "fontWeight": "bold",
              "height": 40,
              "marginLeft": 10,
              "marginTop": 10,
              "textAlign": "center",
              "textAlignVertical": "center",
              "width": 40,
            },
            Object {
              "backgroundColor": "#b94a00",
              "color": "#f39c12",
            },
          ]
        }
      >
        4
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "backgroundColor": "#d35400",
              "borderRadius": 20,
              "color": "#f1c40f",
              "fontWeight": "bold",
              "height": 40,
              "marginLeft": 10,
              "marginTop": 10,
              "textAlign": "center",
              "textAlignVertical": "center",
              "width": 40,
            },
            Object {
              "backgroundColor": "#b94a00",
              "color": "#f39c12",
            },
          ]
        }
      >
        4
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "backgroundColor": "#d35400",
              "borderRadius": 20,
              "color": "#f1c40f",
              "fontWeight": "bold",
              "height": 40,
              "marginLeft": 10,
              "marginTop": 10,
              "textAlign": "center",
              "textAlignVertical": "center",
              "width": 40,
            },
            Object {
              "backgroundColor": "#b94a00",
              "color": "#f39c12",
            },
          ]
        }
      >
        4
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "backgroundColor": "#d35400",
              "borderRadius": 20,
              "color": "#f1c40f",
              "fontWeight": "bold",
              "height": 40,
              "marginLeft": 10,
              "marginTop": 10,
              "textAlign": "center",
              "textAlignVertical": "center",
              "width": 40,
            },
            Object {
              "backgroundColor": "#b94a00",
              "color": "#f39c12",
            },
          ]
        }
      >
        4
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "backgroundColor": "#d35400",
              "borderRadius": 20,
              "color": "#f1c40f",
              "fontWeight": "bold",
              "height": 40,
              "marginLeft": 10,
              "marginTop": 10,
              "textAlign": "center",
              "textAlignVertical": "center",
              "width": 40,
            },
            Object {
              "backgroundColor": "#b94a00",
              "color": "#f39c12",
            },
          ]
        }
      >
        4
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "#d35400",
            "borderRadius": 20,
            "color": "#f1c40f",
            "fontWeight": "bold",
            "height": 40,
            "marginLeft": 10,
            "marginTop": 10,
            "textAlign": "center",
            "textAlignVertical": "center",
            "width": 40,
          }
        }
      >
        4
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "#d35400",
            "borderRadius": 20,
            "color": "#f1c40f",
            "fontWeight": "bold",
            "height": 40,
            "marginLeft": 10,
            "marginTop": 10,
            "textAlign": "center",
            "textAlignVertical": "center",
            "width": 40,
          }
        }
      >
        4
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "#d35400",
            "borderRadius": 20,
            "color": "#f1c40f",
            "fontWeight": "bold",
            "height": 40,
            "marginLeft": 10,
            "marginTop": 10,
            "textAlign": "center",
            "textAlignVertical": "center",
            "width": 40,
          }
        }
      >
        4
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "#d35400",
            "borderRadius": 20,
            "color": "#f1c40f",
            "fontWeight": "bold",
            "height": 40,
            "marginLeft": 10,
            "marginTop": 10,
            "textAlign": "center",
            "textAlignVertical": "center",
            "width": 40,
          }
        }
      >
        4
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "#d35400",
            "borderRadius": 20,
            "color": "#f1c40f",
            "fontWeight": "bold",
            "height": 40,
            "marginLeft": 10,
            "marginTop": 10,
            "textAlign": "center",
            "textAlignVertical": "center",
            "width": 40,
          }
        }
      >
        4
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "#d35400",
            "borderRadius": 20,
            "color": "#f1c40f",
            "fontWeight": "bold",
            "height": 40,
            "marginLeft": 10,
            "marginTop": 10,
            "textAlign": "center",
            "textAlignVertical": "center",
            "width": 40,
          }
        }
      >
        4
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "borderRadius": 50,
              "height": 100,
              "width": 100,
            },
            Object {
              "backgroundColor": "#9b59b6",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#1abc9c",
              "borderRadius": 45,
              "height": 90,
              "marginLeft": 5,
              "marginTop": 5,
              "width": 90,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontSize": 30,
                  "fontWeight": "bold",
                  "marginTop": 20,
                  "textAlign": "center",
                },
                Object {
                  "color": "white",
                },
              ]
            }
          >
            0
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "height": 2,
              "marginTop": 50,
              "width": 90,
            },
            Object {
              "backgroundColor": "#9b59b6",
            },
          ]
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "borderRadius": 10,
              "color": "white",
              "fontSize": 20,
              "height": 40,
              "marginTop": 30,
              "padding": 5,
              "textAlign": "center",
              "width": 150,
            },
            Object {
              "backgroundColor": "#9b59b6",
            },
          ]
        }
      >
        Your turn
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders the ScoreCircle component 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 50,
          "height": 100,
          "width": 100,
        },
        Object {
          "backgroundColor": "white",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#1abc9c",
          "borderRadius": 45,
          "height": 90,
          "marginLeft": 5,
          "marginTop": 5,
          "width": 90,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 30,
              "fontWeight": "bold",
              "marginTop": 20,
              "textAlign": "center",
            },
            Object {
              "color": "white",
              "opacity": 0.5,
            },
          ]
        }
      >
        20
      </Text>
    </View>
  </View>
  <View />
  <View />
</View>
`;

exports[`renders the Welcome component 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#1abc9c",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#ecf0f1",
          "fontSize": 80,
          "marginTop": 16,
        }
      }
    >
      Awale
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 30,
        }
      }
    >
      <View
        accessibilityComponentType="button"
        accessibilityLabel={undefined}
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        accessible={true}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#0C42FD",
                  "fontSize": 18,
                  "padding": 8,
                  "textAlign": "center",
                },
                Object {
                  "color": "#138a72",
                },
              ]
            }
          >
            Play against computer
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "marginBottom": 30,
        }
      }
    >
      <View
        accessibilityComponentType="button"
        accessibilityLabel={undefined}
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        accessible={true}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#0C42FD",
                  "fontSize": 18,
                  "padding": 8,
                  "textAlign": "center",
                },
                Object {
                  "color": "#138a72",
                },
              ]
            }
          >
            Play against another player
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
